--- a/react-app/src/components/TrackListing/TrackListing.css
+++ b/react-app/src/components/TrackListing/TrackListing.css
@@ -101,7 +101,7 @@
 }
 
 .tl-edit-menu {
-  height: 78px;
+  height: 76px;
 }
 
 .tl-edit-menu-not-user {
